# python-monorepo

./: .gitignore
.github/workflows/: main.yaml
frontend/: package-lock.json  package.json
sample_1/: README.md
sample_1/libs/lib-one/: pyproject.toml
sample_1/libs/lib-one/lib_one/: main.py
sample_1/libs/lib-one/tests/: test_lib_one.py
sample_1/libs/logger/: pyproject.toml
sample_2/: README.md
